# magalu-notification-service

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 3813a7f9964b_communication_type_field_renamed_to_.py  bb4c4063bc91_create_notifications_table.py
magalu_notification/: celery.py  celery_tasks.py  main.py  settings.py
magalu_notification/db/: connection.py  postgres.py
magalu_notification/models/: notification.py
magalu_notification/repositories/: notification_repository.py
magalu_notification/schemas/: general.py  notification.py
magalu_notification/services/: exceptions.py  notification_service.py
tests/: conftest.py  test_notification_controllers.py  test_notification_repo.py  test_notification_service.py
