[tool.poetry]
name = "magalu-notification-service"
version = "0.1.0"
description = "A service to receive notifications, store in a database and send it"
authors = ["Dêvid Teófilo <nnick4673@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
celery = "^5.4.0"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.2.1"}
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
blue = "^0.9.1"
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "magalu_notification/"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
req = "poetry export --without-hashes -f requirements.txt -o requirements.txt && poetry export --only dev --without-hashes -f requirements.txt -o requirements-dev.txt"
run = "fastapi dev magalu_notification/main.py"
